tests/fixtures/invalid/set_int.py
# Cannot call set() with Int
x = set(1)
